--- a/html/main.html
+++ b/html/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-    <link rel="stylesheet" href="bulma.css">
+    <link rel="stylesheet" href="../css/bulma.css">
 </head>
 
 <body>
