--- a/html/main.html
+++ b/html/main.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <section class="hero is-info is-large">
+    <section class="hero is-fullheight"
+        style="background-image: url('../images/hero.jpg'); background-size: cover; background-position: center;">
         <div class="hero-head">
             <nav class="navbar">
                 <div class="container">
