--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-medium">
+    <section class="hero is-primary is-medium" style="background-image: url('../images/hero.jpg'); background-size: cover; background-position: center;">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
           <nav class="navbar">
