--- a/html/social.html
+++ b/html/social.html
@@ -11,7 +11,7 @@
 
 <body>
     <section class="hero is-primary is-medium"
-        style="background-image: url('../images/hero.jpg'); background-size: cover; background-position: center;">
+        style="background-image: url('../images/socialhero.jpg'); background-size: cover; background-position: center;">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
             <nav class="navbar">
@@ -29,9 +29,9 @@
                     </div>
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
-                            <a class="navbar-item is-active"> Home </a>
-                            <a class="navbar-item"> Examples </a>
-                            <a class="navbar-item"> Documentation </a>
+                            <a class="navbar-item is-active" href="./main.html"> Home </a>
+                            <a class="navbar-item"> Theme1 </a>
+                            <a class="navbar-item"> Button2 </a>
                             <span class="navbar-item">
                                 <a class="button is-primary is-inverted">
                                     <span class="icon">
@@ -49,22 +49,22 @@
         <!-- Hero content: will be in the middle -->
         <div class="hero-body">
             <div class="container has-text-centered">
-                <p class="title">Title</p>
-                <p class="subtitle">Subtitle</p>
+                <h1 class="title" style="font-size: 80px; position: relative;">Social</h1>
+                <p class="subtitle">Volunteering & engagement</p>
             </div>
+            <img src="../images/cloves.webp" alt="Left Gif" class="largegif-overlay-left">
+            <img src="../images/cloves.webp" alt="Right Gif" class="largegif-overlay-right">
         </div>
 
         <!-- Hero footer: will stick at the bottom -->
         <div class="hero-foot">
-            <nav class="tabs">
+            <nav class="tabs is-boxed">
                 <div class="container">
                     <ul>
                         <li class="is-active"><a>Overview</a></li>
-                        <li><a>Modifiers</a></li>
-                        <li><a>Grid</a></li>
-                        <li><a>Elements</a></li>
-                        <li><a>Components</a></li>
-                        <li><a>Layout</a></li>
+                        <li><a>Volunteering</a></li>
+                        <li><a>Erasmus</a></li>
+                        <li><a>Collaborations</a></li>
                     </ul>
                 </div>
             </nav>
