--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -54,8 +54,8 @@
     </div>
     
     <!-- Left and Right GIFs -->
-    <img src="../images/cloves.webp" alt="Left Gif" class="largegif-overlay-left">
-    <img src="../images/cloves.webp" alt="Right Gif" class="largegif-overlay-right">
+    <img src="../images/craft.webp" alt="Left Gif" class="largegif-overlay-left">
+    <img src="../images/craft.webp" alt="Right Gif" class="largegif-overlay-right">
   </div>
 
   <!-- Hero footer: will stick at the bottom -->
