--- a/html/main.html
+++ b/html/main.html
@@ -60,7 +60,7 @@
                 <div class="container">
                     <ul>
                         <li class="is-active">
-                            <a>Overview</a>
+                            <a>Overview &#x21A7;</a>
                         </li>
                         <li>
                             <a href="./hobbies.html">Hobbies</a>
