--- a/html/career.html
+++ b/html/career.html
@@ -30,19 +30,13 @@
           </div>
           <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
-              <a class="navbar-item is-active" href="./main.html"> Home </a>
-              <a class="navbar-item"> Theme1 </a>
-              <a class="navbar-item"> Button2 </a>
-              <span class="navbar-item">
-                <a class="button is-primary is-inverted">
-                  <span class="icon">
-                    <i class="fab fa-github"></i>
-                  </span>
-                  <span>Download</span>
-                </a>
-              </span>
+                <span class="navbar-item">
+                    <a class="button is-primary is-inverted" href="main.html">
+                        <span>&#x21AB; Home</span>
+                    </a>
+                </span>
             </div>
-          </div>
+        </div>
         </div>
       </nav>
     </div>
@@ -62,7 +56,7 @@
       <nav class="tabs is-boxed">
         <div class="container">
           <ul id="tabs-list">
-            <li class="is-active" data-tab="overview"><a>Overview</a></li>
+            <li class="is-active" data-tab="overview"><a>Overview &#x21A7;</a></li>
             <li data-tab="drawing"><a>Programming</a></li>
             <li data-tab="cooking"><a>Teaching</a></li>
             <li data-tab="crafting"><a>Courses & Certifications</a></li>
@@ -79,27 +73,21 @@
       </h2>
     </section>
     <section class="section is-medium" id="drawing-content" style="display: none;">
-      <h1 class="title">Drawing Section</h1>
+      <h1 class="title">Programming Section</h1>
       <h2 class="subtitle">
-        Here are some of my favorite drawing projects.
+        Here are some of my favorite programming projects.
       </h2>
     </section>
     <section class="section is-medium" id="cooking-content" style="display: none;">
-      <h1 class="title">Cooking Section</h1>
+      <h1 class="title">Teaching Section</h1>
       <h2 class="subtitle">
-        Cooking is a passion of mine. Let me share some recipes.
+        Teaching is a passion of mine. Let me share some projects.
       </h2>
     </section>
     <section class="section is-medium" id="crafting-content" style="display: none;">
-      <h1 class="title">Crafting Section</h1>
+      <h1 class="title">Courses & Certifications Section</h1>
       <h2 class="subtitle">
-        Check out some of my handmade creations.
-      </h2>
-    </section>
-    <section class="section is-medium" id="languages-content" style="display: none;">
-      <h1 class="title">Languages Section</h1>
-      <h2 class="subtitle">
-        I enjoy learning different languages. Here's a bit about my journey.
+        Check out some of my Courses & Certifications.
       </h2>
     </section>
   </section>
