--- a/html/contact.html
+++ b/html/contact.html
@@ -7,6 +7,40 @@
   <title>Hello Bulma!</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
   <link rel="stylesheet" href="../css/bulma.css">
+  <script>
+    async function handleSubmit(event) {
+      event.preventDefault();
+
+      const form = event.target;
+      const formData = new FormData(form);
+
+      try {
+        const response = await fetch(
+          "https://contact-anja.vercel.app/send_email",
+          {
+            method: "POST",
+            body: formData,
+            headers: {
+              Accept: "application/json",
+            },
+          }
+        );
+
+        const result = await response.json();
+        alert(
+          result.success
+            ? "👍 Message sent successfully!"
+            : "Error: " + result.error
+        );
+
+        if (response.ok) {
+          window.location.href = "/";
+        }
+      } catch (error) {
+        alert("Error: " + error.message);
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -29,15 +63,9 @@
           </div>
           <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
-              <a class="navbar-item is-active" href="./main.html"> Home </a>
-              <a class="navbar-item"> Theme1 </a>
-              <a class="navbar-item"> Button2 </a>
               <span class="navbar-item">
-                <a class="button is-primary is-inverted">
-                  <span class="icon">
-                    <i class="fab fa-github"></i>
-                  </span>
-                  <span>Download</span>
+                <a class="button is-primary is-inverted" href="main.html">
+                  <span>&#x21AB; Home</span>
                 </a>
               </span>
             </div>
@@ -58,28 +86,24 @@
 
     <!-- Hero footer: will stick at the bottom -->
     <div class="hero-foot">
-      <nav class="tabs is-boxed">
-        <div class="container">
-          <ul>
-            <li class="is-active"><a>Overview</a></li>
-            <li><a>Modifiers</a></li>
-            <li><a>Grid</a></li>
-            <li><a>Elements</a></li>
-            <li><a>Components</a></li>
-            <li><a>Layout</a></li>
-          </ul>
-        </div>
-      </nav>
     </div>
   </section>
   <section id="content">
-    <section class="section is-medium">
-      <h1 class="title">Medium section</h1>
-      <h2 class="subtitle">
-        A simple container to divide your page into <strong>sections</strong>, like
-        the one you're currently reading.
-      </h2>
-    </section>
+    <div class="section is-medium">
+      <form id="contactForm" onsubmit="handleSubmit(event)">
+        <label class="label" for="name">Your name (required):</label>
+        <input class="input" type="text" id="name" name="name" required /><br /><br />
+
+        <label class="label" for="email">Your email (required):</label>
+        <input class="input" type="email" id="email" name="email" required /><br /><br />
+
+        <label class="label" for="message">Your message (required):</label><br />
+        <textarea class="textarea" id="message" name="message" rows="4" required></textarea><br />
+        <button class="button center-button is-dark" type="submit" value="Send">
+          <h1>Send</h1>
+        </button>
+      </form>
+    </div>
   </section>
   <footer class="footer">
     <div class="content has-text-centered">
