--- a/html/career.html
+++ b/html/career.html
@@ -12,7 +12,7 @@
 
 <body>
   <section class="hero is-primary is-medium"
-    style="background-image: url('../images/careerhero.jpg'); background-size: cover; background-position: center;">
+    style="background-image: url('../images/careerhero.jpg'); background-size: cover; background-position: center; border-radius: 0% 0% 3% 3%;">
     <!-- Hero head: will stick at the top -->
     <div class="hero-head">
       <nav class="navbar">
@@ -93,13 +93,7 @@
   </section>
   <footer class="footer">
     <div class="content has-text-centered">
-      <p>
-        <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
-        The source code is licensed
-        <a href="https://opensource.org/license/mit">MIT</a>. The
-        website content is licensed
-        <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//">CC BY NC SA 4.0</a>.
-      </p>
+      <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/" target="_blank">Bulma</a>.</p>
     </div>
   </footer>
 </body>
