--- a/html/main.html
+++ b/html/main.html
@@ -107,13 +107,7 @@
 
     <footer class="footer">
         <div class="content has-text-centered">
-            <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
-                The source code is licensed
-                <a href="https://opensource.org/license/mit">MIT</a>. The
-                website content is licensed
-                <a href="https://creativecommons.org/licenses/by-nc-sa/4.0//">CC BY NC SA 4.0</a>.
-            </p>
+            <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/" target="_blank">Bulma</a>.</p>
         </div>
     </footer>
 </body>
