smooth scroll implemented

--- a/html/main.html
+++ b/html/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="../css/bulma.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="../js/scrollToText.js"></script>
 </head>
 
 <body>
@@ -60,8 +61,9 @@
                 <div class="container">
                     <ul>
                         <li class="is-active">
-                            <a>Overview &#x21A7;</a>
-                        </li>
+                            <a href="javascript:void(0);" onclick="scrollToText()">Overview &#x21A7;</a>
+                        </li>                        
+                        
                         <li>
                             <a href="./hobbies.html">Hobbies</a>
                         </li>
