--- a/html/main.html
+++ b/html/main.html
@@ -7,7 +7,7 @@
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="../css/bulma.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="../js/scrollToText.js"></script>
 </head>
 
@@ -31,14 +31,19 @@
                     </div>
                     <div id="navbarMenuHeroB" class="navbar-menu">
                         <div class="navbar-end">
-                            <a class="navbar-item"> Theme1 </a>
-                            <a class="navbar-item"> Button2 </a>
                             <span class="navbar-item">
-                                <a class="button is-info is-inverted">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>Download</span>
+                                <a class="button is-warning">
+                                    <span><i class="fa-solid fa-mug-hot"></i></span>
+                                </a>
+                            </span>
+                            <span class="navbar-item">
+                                <a class="button is-danger">
+                                    <span><i class="fa fa-language"></i></span>
+                                </a>
+                            </span>
+                            <span class="navbar-item">
+                                <a class="button">
+                                    <span><i class="fa-brands fa-github-alt"></i></span>
                                 </a>
                             </span>
                         </div>
